--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/bundle/delimitMate"]
 	path = vim/bundle/delimitMate
 	url = http://github.com/Raimondi/delimitMate.git
+[submodule "vim/bundle/matchit"]
+	path = vim/bundle/matchit
+	url = http://github.com/vim-scripts/matchit.zip.git
