--- a/.gitmodules
+++ b/.gitmodules
@@ -4,12 +4,15 @@
 [submodule "vim/bundle/ragtag"]
 	path = vim/bundle/ragtag
 	url = http://github.com/tpope/vim-ragtag.git
+	ignore = untracked
 [submodule "vim/bundle/surround"]
 	path = vim/bundle/surround
 	url = http://github.com/tpope/vim-surround.git
+	ignore = untracked
 [submodule "vim/bundle/unimpaired"]
 	path = vim/bundle/unimpaired
 	url = http://github.com/tpope/vim-unimpaired.git
+	ignore = untracked
 [submodule "vim/bundle/repeat"]
 	path = vim/bundle/repeat
 	url = http://github.com/tpope/vim-repeat.git
@@ -19,9 +22,11 @@
 [submodule "vim/bundle/snipmate"]
 	path = vim/bundle/snipmate
 	url = http://github.com/msanders/snipmate.vim.git
+	ignore = untracked
 [submodule "vim/bundle/delimitMate"]
 	path = vim/bundle/delimitMate
 	url = http://github.com/Raimondi/delimitMate.git
 [submodule "vim/bundle/matchit"]
 	path = vim/bundle/matchit
 	url = http://github.com/vim-scripts/matchit.zip.git
+	ignore = untracked
