--- a/.gitmodules
+++ b/.gitmodules
@@ -36,3 +36,7 @@
 [submodule "vim/bundle/markdown"]
 	path = vim/bundle/markdown
 	url = http://github.com/tpope/vim-markdown.git
+[submodule "vim/bundle/speeddating"]
+	path = vim/bundle/speeddating
+	url = http://github.com/tpope/vim-speeddating.git
+	ignore = untracked
