--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,14 @@
 [submodule "vim/bundle/rails"]
 	path = vim/bundle/rails
 	url = http://github.com/tpope/vim-rails.git
+[submodule "vim/bundle/haml"]
+	path = vim/bundle/haml
+	url = http://github.com/tpope/vim-haml.git
+[submodule "vim/bundle/pastie"]
+	path = vim/bundle/pastie
+	url = http://github.com/tpope/vim-pastie.git
+	ignore = untracked
+[submodule "vim/bundle/abolish"]
+	path = vim/bundle/abolish
+	url = http://github.com/tpope/vim-abolish.git
+	ignore = untracked
