--- a/.gitmodules
+++ b/.gitmodules
@@ -1,56 +1,56 @@
 [submodule "vim/bundle/fugitive"]
 	path = vim/bundle/fugitive
-	url = http://github.com/tpope/vim-fugitive.git
+	url = git://github.com/tpope/vim-fugitive.git
 [submodule "vim/bundle/ragtag"]
 	path = vim/bundle/ragtag
-	url = http://github.com/tpope/vim-ragtag.git
+	url = git://github.com/tpope/vim-ragtag.git
 	ignore = untracked
 [submodule "vim/bundle/surround"]
 	path = vim/bundle/surround
-	url = http://github.com/tpope/vim-surround.git
+	url = git://github.com/tpope/vim-surround.git
 	ignore = untracked
 [submodule "vim/bundle/unimpaired"]
 	path = vim/bundle/unimpaired
-	url = http://github.com/tpope/vim-unimpaired.git
+	url = git://github.com/tpope/vim-unimpaired.git
 	ignore = untracked
 [submodule "vim/bundle/repeat"]
 	path = vim/bundle/repeat
-	url = http://github.com/tpope/vim-repeat.git
+	url = git://github.com/tpope/vim-repeat.git
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
-	url = http://github.com/scrooloose/nerdtree.git
+	url = git://github.com/scrooloose/nerdtree.git
 [submodule "vim/bundle/snipmate"]
 	path = vim/bundle/snipmate
-	url = http://github.com/msanders/snipmate.vim.git
+	url = git://github.com/msanders/snipmate.vim.git
 	ignore = untracked
 [submodule "vim/bundle/delimitMate"]
 	path = vim/bundle/delimitMate
-	url = http://github.com/Raimondi/delimitMate.git
+	url = git://github.com/Raimondi/delimitMate.git
 [submodule "vim/bundle/matchit"]
 	path = vim/bundle/matchit
-	url = http://github.com/vim-scripts/matchit.zip.git
+	url = git://github.com/vim-scripts/matchit.zip.git
 	ignore = untracked
 [submodule "vim/bundle/nerdcommenter"]
 	path = vim/bundle/nerdcommenter
-	url = http://github.com/scrooloose/nerdcommenter.git
+	url = git://github.com/scrooloose/nerdcommenter.git
 [submodule "vim/bundle/markdown"]
 	path = vim/bundle/markdown
-	url = http://github.com/tpope/vim-markdown.git
+	url = git://github.com/tpope/vim-markdown.git
 [submodule "vim/bundle/speeddating"]
 	path = vim/bundle/speeddating
-	url = http://github.com/tpope/vim-speeddating.git
+	url = git://github.com/tpope/vim-speeddating.git
 	ignore = untracked
 [submodule "vim/bundle/rails"]
 	path = vim/bundle/rails
-	url = http://github.com/tpope/vim-rails.git
+	url = git://github.com/tpope/vim-rails.git
 [submodule "vim/bundle/haml"]
 	path = vim/bundle/haml
-	url = http://github.com/tpope/vim-haml.git
+	url = git://github.com/tpope/vim-haml.git
 [submodule "vim/bundle/pastie"]
 	path = vim/bundle/pastie
-	url = http://github.com/tpope/vim-pastie.git
+	url = git://github.com/tpope/vim-pastie.git
 	ignore = untracked
 [submodule "vim/bundle/abolish"]
 	path = vim/bundle/abolish
-	url = http://github.com/tpope/vim-abolish.git
+	url = git://github.com/tpope/vim-abolish.git
 	ignore = untracked
