--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 	path = vim/bundle/jshint
 	url = https://github.com/walm/jshint.vim.git
 	ignore = untracked
+[submodule "vim/bundle/vim-jade"]
+	path = vim/bundle/vim-jade
+	url = https://github.com/digitaltoad/vim-jade.git
