--- a/.gitmodules
+++ b/.gitmodules
@@ -80,3 +80,6 @@
 [submodule "vim/bundle/hammer.vim"]
 	path = vim/bundle/hammer.vim
 	url = git://github.com/robgleeson/hammer.vim.git
+[submodule "vim/bundle/ack"]
+	path = vim/bundle/ack
+	url = https://github.com/mileszs/ack.vim
