--- a/.gitmodules
+++ b/.gitmodules
@@ -83,3 +83,6 @@
 [submodule "vim/bundle/vim-pathogen"]
 	path = vim/bundle/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim/bundle/hammer.vim"]
+	path = vim/bundle/hammer.vim
+	url = git://github.com/robgleeson/hammer.vim.git
