Making tmux work properly with the clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ unbind C-b
 bind C-a send-prefix
 
 # Reduce the default delay
-set -s escape-time 1
+set -sg escape-time 1
 
 # Index tabs by 1, not 0
 set -g base-index 1
@@ -13,6 +13,12 @@ setw -g pane-base-index 1
 # Mmm, Vi mode
 setw -g mode-keys vi
 set -g status-keys vi
+
+# I like my mouse occasionally
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
@@ -71,6 +77,9 @@ set -g status-left-length 40
 set -g status-left "#[fg=green][#S] #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-right "#[fg=cyan]%d %b %R"
 # set -g status-justify centre
+
+# Make the system clipboard work correctly
+set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Identify activity
 setw -g monitor-activity on
