--- a/tmux.conf
+++ b/tmux.conf
@@ -73,9 +73,9 @@ set -g status-utf8 on
 set -g default-terminal "screen-256color"
 
 # Status adjustments
-set -g status-left-length 40
-set -g status-left "#[fg=green][#S] #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%d %b %R"
+#set -g status-left-length 40
+#set -g status-left "#[fg=green][#S] #[fg=yellow]#I #[fg=cyan]#P"
+#set -g status-right "#[fg=cyan]%d %b %R"
 # set -g status-justify centre
 
 # Make the system clipboard work correctly
