More OS-neutral approach
This does mean on non-OSX environments, it'll run a failing command on
every new shell, but eh. It should still be fairly fast, probably won't
notice.

Details:
https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/8#issuecomment-16245201

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,7 +77,7 @@ set -g status-left "#[fg=green][#S] #[fg=yellow]#I #[fg=cyan]#P"
 #set -g status-justify centre
 
 # Make the system clipboard work correctly
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l bash 2> /dev/null || bash"
 
 # Identify activity
 setw -g monitor-activity on
