Improving copy/paste with tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,8 +77,19 @@ set -g status-left "#[fg=green][#S] #[fg=yellow]#I #[fg=cyan]#P"
 #set -g status-justify centre
 
 # Make the system clipboard work correctly
-set-option -g default-command "reattach-to-user-namespace -l bash 2> /dev/null || bash"
+#set-option -g default-command "reattach-to-user-namespace -l bash 2> /dev/null || bash"
+set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Identify activity
 setw -g monitor-activity on
 set -g visual-activity on
+
+# Copy/pasting Vim style
+# http://stackoverflow.com/questions/11042920/how-to-copy-and-paste-between-different-tmux-panes-running-vim-instances
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+bind -t vi-copy V rectangle-toggle
+
+# Buffers to/from Mac clipboard, yay tmux book from pragprog
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
