Small tweak to tmux bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,7 +72,7 @@ set -g default-terminal "screen-256color"
 
 # Status adjustments
 set -g status-left-length 40
-set -g status-left "#[fg=green][#S] #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=green][#S] #[fg=yellow]#I:#[fg=cyan]#P"
 #set -g status-right "#[fg=cyan]%d %b %R"
 #set -g status-justify centre
 
