--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 	path = vim/bundle/vitality
 	url = git://github.com/sjl/vitality.vim.git
 	ignore = untracked
+[submodule "vim/bundle/dispatch"]
+	path = vim/bundle/dispatch
+	url = git://github.com/tpope/vim-dispatch.git
