--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,9 @@ set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Automatically renumber windows
+set -g renumber-windows on
+
 # Mmm, Vi mode
 setw -g mode-keys vi
 set -g status-keys vi
