Ignore untracked for editorconfig

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,4 @@
 [submodule "vim/bundle/editorconfig-vim"]
 	path = vim/bundle/editorconfig-vim
 	url = git://github.com/editorconfig/editorconfig-vim.git
+	ignore = untracked
