--- a/tmux.conf
+++ b/tmux.conf
@@ -81,7 +81,7 @@ set -g status-left "#[fg=green][#S] #[fg=yellow]#I:#[fg=cyan]#P"
 
 # Make the system clipboard work correctly
 #set-option -g default-command "reattach-to-user-namespace -l bash 2> /dev/null || bash"
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Identify activity
 setw -g monitor-activity on
