Applying significant tmux color adjustments

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,26 +48,62 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# Colors
-set -g status-fg white
-set -g status-bg black
+# Old Colors
+#set -g status-fg white
+#set -g status-bg black
+#
+#setw -g window-status-fg cyan
+#setw -g window-status-bg default
+#setw -g window-status-attr dim
+#
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
+#
+#set -g pane-border-fg green
+#set -g pane-border-bg black
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg yellow
+#
+#set -g message-fg white
+#set -g message-bg black
+#set -g message-attr bright
 
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+### New Colors
+# Solarized 256, from
+# https://github.com/seebi/tmux-colors-solarized
 
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
 
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
 
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+### End New Colors
 
 # Make things appear goodly
 set -g status-utf8 on
