--- a/.gitmodules
+++ b/.gitmodules
@@ -1,103 +1,107 @@
 [submodule "vim/bundle/fugitive"]
-	path = vim/bundle/fugitive
-	url = https://github.com/tpope/vim-fugitive.git
+  path = vim/bundle/fugitive
+  url = https://github.com/tpope/vim-fugitive.git
 [submodule "vim/bundle/ragtag"]
-	path = vim/bundle/ragtag
-	url = https://github.com/tpope/vim-ragtag.git
-	ignore = untracked
+  path = vim/bundle/ragtag
+  url = https://github.com/tpope/vim-ragtag.git
+  ignore = untracked
 [submodule "vim/bundle/surround"]
-	path = vim/bundle/surround
-	url = https://github.com/tpope/vim-surround.git
-	ignore = untracked
+  path = vim/bundle/surround
+  url = https://github.com/tpope/vim-surround.git
+  ignore = untracked
 [submodule "vim/bundle/unimpaired"]
-	path = vim/bundle/unimpaired
-	url = https://github.com/tpope/vim-unimpaired.git
-	ignore = untracked
+  path = vim/bundle/unimpaired
+  url = https://github.com/tpope/vim-unimpaired.git
+  ignore = untracked
 [submodule "vim/bundle/repeat"]
-	path = vim/bundle/repeat
-	url = https://github.com/tpope/vim-repeat.git
+  path = vim/bundle/repeat
+  url = https://github.com/tpope/vim-repeat.git
 [submodule "vim/bundle/nerdtree"]
-	path = vim/bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
+  path = vim/bundle/nerdtree
+  url = https://github.com/scrooloose/nerdtree.git
 [submodule "vim/bundle/snipmate"]
-	path = vim/bundle/snipmate
-	url = https://github.com/brianarn/snipmate.vim.git
-	ignore = untracked
+  path = vim/bundle/snipmate
+  url = https://github.com/brianarn/snipmate.vim.git
+  ignore = untracked
 [submodule "vim/bundle/delimitMate"]
-	path = vim/bundle/delimitMate
-	url = https://github.com/Raimondi/delimitMate.git
+  path = vim/bundle/delimitMate
+  url = https://github.com/Raimondi/delimitMate.git
 [submodule "vim/bundle/matchit"]
-	path = vim/bundle/matchit
-	url = https://github.com/vim-scripts/matchit.zip.git
-	ignore = untracked
+  path = vim/bundle/matchit
+  url = https://github.com/vim-scripts/matchit.zip.git
+  ignore = untracked
 [submodule "vim/bundle/nerdcommenter"]
-	path = vim/bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter.git
+  path = vim/bundle/nerdcommenter
+  url = https://github.com/scrooloose/nerdcommenter.git
 [submodule "vim/bundle/markdown"]
-	path = vim/bundle/markdown
-	url = https://github.com/tpope/vim-markdown.git
+  path = vim/bundle/markdown
+  url = https://github.com/tpope/vim-markdown.git
 [submodule "vim/bundle/speeddating"]
-	path = vim/bundle/speeddating
-	url = https://github.com/tpope/vim-speeddating.git
-	ignore = untracked
+  path = vim/bundle/speeddating
+  url = https://github.com/tpope/vim-speeddating.git
+  ignore = untracked
 [submodule "vim/bundle/abolish"]
-	path = vim/bundle/abolish
-	url = https://github.com/tpope/vim-abolish.git
-	ignore = untracked
+  path = vim/bundle/abolish
+  url = https://github.com/tpope/vim-abolish.git
+  ignore = untracked
 [submodule "vim/bundle/solarized"]
-	path = vim/bundle/solarized
-	url = https://github.com/brianarn/vim-colors-solarized.git
+  path = vim/bundle/solarized
+  url = https://github.com/brianarn/vim-colors-solarized.git
 [submodule "vim/bundle/tabular"]
-	path = vim/bundle/tabular
-	url = https://github.com/godlygeek/tabular.git
+  path = vim/bundle/tabular
+  url = https://github.com/godlygeek/tabular.git
 [submodule "vim/bundle/textile"]
-	path = vim/bundle/textile
-	url = https://github.com/timcharper/textile.vim.git
-	ignore = untracked
+  path = vim/bundle/textile
+  url = https://github.com/timcharper/textile.vim.git
+  ignore = untracked
 [submodule "vim/bundle/ack"]
-	path = vim/bundle/ack
-	url = https://github.com/mileszs/ack.vim
+  path = vim/bundle/ack
+  url = https://github.com/mileszs/ack.vim
 [submodule "vim/bundle/vim-pathogen"]
-	path = vim/bundle/vim-pathogen
-	url = https://github.com/tpope/vim-pathogen.git
+  path = vim/bundle/vim-pathogen
+  url = https://github.com/tpope/vim-pathogen.git
 [submodule "vim/bundle/hammer.vim"]
-	path = vim/bundle/hammer.vim
-	url = https://github.com/matthias-guenther/hammer.vim.git
+  path = vim/bundle/hammer.vim
+  url = https://github.com/matthias-guenther/hammer.vim.git
 [submodule "vim/bundle/ctrlp.vim"]
-	path = vim/bundle/ctrlp.vim
-	url = https://github.com/kien/ctrlp.vim
+  path = vim/bundle/ctrlp.vim
+  url = https://github.com/kien/ctrlp.vim
 [submodule "vim/bundle/syntastic"]
-	path = vim/bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
+  path = vim/bundle/syntastic
+  url = https://github.com/scrooloose/syntastic.git
 [submodule "vim/bundle/javascript"]
-	path = vim/bundle/javascript
-	url = https://github.com/pangloss/vim-javascript.git
+  path = vim/bundle/javascript
+  url = https://github.com/pangloss/vim-javascript.git
 [submodule "vim/bundle/vim-markdown-folding"]
-	path = vim/bundle/vim-markdown-folding
-	url = https://github.com/nelstrom/vim-markdown-folding.git
+  path = vim/bundle/vim-markdown-folding
+  url = https://github.com/nelstrom/vim-markdown-folding.git
 [submodule "vim/bundle/vitality"]
-	path = vim/bundle/vitality
-	url = https://github.com/sjl/vitality.vim.git
-	ignore = untracked
+  path = vim/bundle/vitality
+  url = https://github.com/sjl/vitality.vim.git
+  ignore = untracked
 [submodule "vim/bundle/dispatch"]
-	path = vim/bundle/dispatch
-	url = https://github.com/tpope/vim-dispatch.git
+  path = vim/bundle/dispatch
+  url = https://github.com/tpope/vim-dispatch.git
 [submodule "vim/bundle/editorconfig-vim"]
-	path = vim/bundle/editorconfig-vim
-	url = https://github.com/editorconfig/editorconfig-vim.git
-	ignore = untracked
+  path = vim/bundle/editorconfig-vim
+  url = https://github.com/editorconfig/editorconfig-vim.git
+  ignore = untracked
 [submodule "vim/bundle/stylus"]
-	path = vim/bundle/stylus
-	url = https://github.com/wavded/vim-stylus.git
+  path = vim/bundle/stylus
+  url = https://github.com/wavded/vim-stylus.git
 [submodule "oh-my-zsh"]
-	path = oh-my-zsh
-	url = https://github.com/brianarn/oh-my-zsh.git
+  path = oh-my-zsh
+  url = https://github.com/brianarn/oh-my-zsh.git
 [submodule "vim/bundle/vim-json"]
-	path = vim/bundle/vim-json
-	url = https://github.com/elzr/vim-json
+  path = vim/bundle/vim-json
+  url = https://github.com/elzr/vim-json
 [submodule "vim/bundle/mustache"]
-	path = vim/bundle/mustache
-	url = https://github.com/mustache/vim-mode.git
+  path = vim/bundle/mustache
+  url = https://github.com/mustache/vim-mode.git
 [submodule "vim/bundle/vim-jade"]
-	path = vim/bundle/vim-jade
-	url = https://github.com/digitaltoad/vim-jade.git
+  path = vim/bundle/vim-jade
+  url = https://github.com/digitaltoad/vim-jade.git
+[submodule "vim/bundle/vimwiki"]
+  path = vim/bundle/vimwiki
+  url = https://github.com/vimwiki/vimwiki.git
+  ignore = untracked
