OS-specific tmux configuration
This works for now, but I still have some weirdness when running my tmux
in older environments.

--- a/tmux.conf
+++ b/tmux.conf
@@ -115,10 +115,6 @@ set -g status-left "#[fg=green][#S] #[fg=yellow]#I:#[fg=cyan]#P"
 #set -g status-right "#[fg=cyan]%d %b %R"
 #set -g status-justify centre
 
-# Make the system clipboard work correctly
-#set-option -g default-command "reattach-to-user-namespace -l bash 2> /dev/null || bash"
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
 # Identify activity
 setw -g monitor-activity on
 set -g visual-activity on
@@ -129,6 +125,6 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 bind -t vi-copy V rectangle-toggle
 
-# Buffers to/from Mac clipboard, yay tmux book from pragprog
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+# OS-specific files
+if-shell 'test "$(uname -s)" = "Darwin"' 'source ~/.tmux-osx.conf'
+if-shell 'test "$(uname -s)" = "Linux"'  'source ~/.tmux-linux.conf'
