--- a/tmux.conf
+++ b/tmux.conf
@@ -48,6 +48,27 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Make things appear goodly
+set -g status-utf8 on
+set -g default-terminal "screen-256color"
+
+# Status adjustments
+set -g status-left-length 40
+set -g status-left "#[fg=brightgreen][#S] #[fg=blue]#I:#[fg=cyan]#P"
+set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-justify left
+
+# Identify activity
+setw -g monitor-activity on
+set -g visual-activity on
+
+# Copy/pasting Vim style
+# http://stackoverflow.com/questions/11042920/how-to-copy-and-paste-between-different-tmux-panes-running-vim-instances
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+bind -t vi-copy V rectangle-toggle
+
+### Colors
 # Old Colors
 #set -g status-fg white
 #set -g status-bg black
@@ -74,56 +95,74 @@ bind -r L resize-pane -R 5
 # https://github.com/seebi/tmux-colors-solarized
 
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+#set-option -g status-bg colour235 #base02
+#set-option -g status-fg colour136 #yellow
+#set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
+#set-window-option -g window-status-fg colour244 #base0
+#set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-fg colour166 #orange
+#set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+#set-option -g pane-border-fg colour235 #base02
+#set-option -g pane-active-border-fg colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+#set-option -g message-bg colour235 #base02
+#set-option -g message-fg colour166 #orange
 
 # pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+#set-option -g display-panes-active-colour colour33 #blue
+#set-option -g display-panes-colour colour166 #orange
 
 # clock
-set-window-option -g clock-mode-colour colour64 #green
+#set-window-option -g clock-mode-colour colour64 #green
 
 ### End New Colors
 
-# Make things appear goodly
-set -g status-utf8 on
-set -g default-terminal "screen-256color"
+### My attempt at colors
+# Based on Flat UI
+# See http://designmodo.github.io/Flat-UI/
 
-# Status adjustments
-set -g status-left-length 40
-set -g status-left "#[fg=green][#S] #[fg=yellow]#I:#[fg=cyan]#P"
-#set -g status-right "#[fg=cyan]%d %b %R"
-#set -g status-justify centre
+# default statusbar colors
+set-option -g status-bg "#2C3E50" # Midnight Blue
+set-option -g status-fg "#ECF0F1" # Clouds
+set-option -g status-attr default
 
-# Identify activity
-setw -g monitor-activity on
-set -g visual-activity on
+# default window title colors
+set-window-option -g window-status-fg "#D35400" # Pumpkin
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
 
-# Copy/pasting Vim style
-# http://stackoverflow.com/questions/11042920/how-to-copy-and-paste-between-different-tmux-panes-running-vim-instances
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
-bind -t vi-copy V rectangle-toggle
+# active window title colors
+set-window-option -g window-status-current-fg "#F1C40F" # Sunflower
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr dim
+
+# pane border
+set-option -g pane-border-fg "#34495E"
+set-option -g pane-border-bg "#2C3E50"
+set-option -g pane-active-border-fg "#1ABC9C"
+set-option -g pane-active-border-bg "#C0392B"
+
+# message text
+set-option -g message-fg "#F39C12" # Orange
+set-option -g message-bg "#2C3E50" # Midnight Blue
+
+# pane number display
+set-option -g display-panes-active-colour "#2980B9"
+set-option -g display-panes-colour "#2980B9"
+
+# clock
+set-window-option -g clock-mode-colour "#C0392B"
+
+### End My Colors
 
 # OS-specific files
 if-shell 'test "$(uname -s)" = "Darwin"' 'source ~/.tmux-osx.conf'
