Tmux: Added buffer limit, changed mouse settings for Tmux 2.1

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,11 +17,15 @@ set -g renumber-windows on
 setw -g mode-keys vi
 set -g status-keys vi
 
+# Let's keep around a lot of buffer
+set -g history-limit 5000
+
 # I like my mouse occasionally
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
+set-option -g mouse on
 
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
