--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/n"]
 	path = external/n
 	url = https://github.com/visionmedia/n.git
+[submodule "external/base16-shell"]
+	path = external/base16-shell
+	url = git@github.com:chriskempson/base16-shell.git
