Tmux: Disabling status-utf8 (though I forget why I did :/ )

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # Make things appear goodly
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g default-terminal "screen-256color"
 
 # Status adjustments
