--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,7 @@ set -g history-limit 5000
 #set -g mouse-select-pane on
 #set -g mouse-resize-pane on
 #set -g mouse-select-window on
-set-option -g mouse on
+set -g mouse on
 
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
