Small config updates
- tmux 2.4 support
- Adding JSX support

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,9 +68,14 @@ set -g visual-activity on
 
 # Copy/pasting Vim style
 # http://stackoverflow.com/questions/11042920/how-to-copy-and-paste-between-different-tmux-panes-running-vim-instances
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
-bind -t vi-copy V rectangle-toggle
+## For tmux 2.3 and prior
+# bind -t vi-copy v begin-selection
+# bind -t vi-copy y copy-selection
+# bind -t vi-copy V rectangle-toggle
+## For tmux 2.4 and later
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind-key -Tcopy-mode-vi 'V' send -X rectangle-toggle
 
 ### Colors
 # Old Colors
