Updating for tmux 2.9's removal of attributes

--- a/tmux.conf
+++ b/tmux.conf
@@ -140,29 +140,20 @@ bind-key -Tcopy-mode-vi 'V' send -X rectangle-toggle
 # See http://designmodo.github.io/Flat-UI/
 
 # default statusbar colors
-set-option -g status-bg "#2C3E50" # Midnight Blue
-set-option -g status-fg "#ECF0F1" # Clouds
-set-option -g status-attr default
+set-option -g status-style bg="#2C3E50",fg="#ECF0F1",default
 
 # default window title colors
-set-window-option -g window-status-fg "#D35400" # Pumpkin
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg="#D35400",bg=default,dim
 
 # active window title colors
-set-window-option -g window-status-current-fg "#F1C40F" # Sunflower
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr dim
+set-window-option -g window-status-current-style fg="#F1C40F",bg=default,dim
 
 # pane border
-set-option -g pane-border-fg "#34495E"
-set-option -g pane-border-bg "#2C3E50"
-set-option -g pane-active-border-fg "#1ABC9C"
-set-option -g pane-active-border-bg "#C0392B"
+set-option -g pane-border-style fg="#34495E",bg="#2C3E50"
+set-option -g pane-active-border-style fg="#1ABC9C",bg="#C0392B"
 
 # message text
-set-option -g message-fg "#F39C12" # Orange
-set-option -g message-bg "#2C3E50" # Midnight Blue
+set-option -g message-style fg="#F39C12",bg="#2C3E50"
 
 # pane number display
 set-option -g display-panes-active-colour "#2980B9"
