--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/oh-my-zsh"]
 	path = external/oh-my-zsh
-	url = https://github.com/brianarn/oh-my-zsh.git
+	url = git@github.com:brianarn/oh-my-zsh.git
 [submodule "external/base16-shell"]
 	path = external/base16-shell
 	url = git@github.com:chriskempson/base16-shell.git
