--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,10 @@ Thumbs.db
 # Stow-specific files that should _not_ be retained #
 #####################################################
 stow/dot-config/coc
+stow/dot-config/code-server
 stow/dot-config/gh
+stow/dot-config/htop
+stow/dot-config/nvim/coc-settings.json
 stow/dot-vim/autoload/plug.vim
 stow/dot-vim/autoload/plug.vim.old
 stow/dot-vim/plugged
