--- a/misc/Brewfile
+++ b/misc/Brewfile
@@ -1,22 +1,40 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
-tap "homebrew/core"
-brew "asdf"
+tap "homebrew/cask-fonts"
+
+brew "bat"
+brew "coreutils"
 brew "direnv"
-brew "fzf"
-brew "macvim"
+brew "gh"
+brew "git"
+brew "jq"
 brew "neovim"
+brew "node@14"
+brew "nvm"
 brew "reattach-to-user-namespace"
 brew "ripgrep"
+brew "starship"
+brew "stow"
+brew "svn"
+brew "tree"
 brew "tmux"
-brew "z"
 brew "zsh"
+
+cask "font-cascadia-code-pl"
+cask "font-cascadia-mono-pl"
+cask "font-caskaydia-cove-nerd-font"
+cask "font-jetbrains-mono"
+cask "font-jetbrains-mono-nerd-font"
+cask "font-source-code-pro"
+cask "font-source-code-pro-for-powerline"
+cask "font-sauce-code-pro-nerd-font"
+
 cask "alfred"
-cask "atom"
-cask "backblaze"
-cask "docker"
+#cask "backblaze" TODO this is failing, commenting out for now
+cask "discord"
 cask "google-chrome"
 cask "iterm2"
 cask "moom"
 cask "slack"
+cask "steam"
 cask "visual-studio-code"
