Adding mosh and Docker Desktop

--- a/misc/Brewfile
+++ b/misc/Brewfile
@@ -8,6 +8,7 @@ brew "direnv"
 brew "gh"
 brew "git"
 brew "jq"
+brew "mosh"
 brew "neovim"
 brew "node@14"
 brew "nvm"
@@ -31,6 +32,7 @@ cask "font-sauce-code-pro-nerd-font"
 
 cask "alfred"
 #cask "backblaze" TODO this is failing, commenting out for now
+cask "docker"
 cask "discord"
 cask "google-chrome"
 cask "iterm2"
