Trying to fix up shell pathing issues

--- a/stow/dot-tmux-linux.conf
+++ b/stow/dot-tmux-linux.conf
@@ -1,2 +1,3 @@
-# Use zsh if possible
-if-shell 'test "$(which zsh)"' 'set-option -g default-shell /bin/zsh'
+# Don't do full login shells
+set-option -g default-shell "$SHELL"
+set-option -g default-command "$SHELL"
