tmux-changes: first start

--- a/stow/dot-tmux.conf
+++ b/stow/dot-tmux.conf
@@ -4,7 +4,10 @@ unbind C-b
 bind C-a send-prefix
 
 # Reduce the default delay
-set -sg escape-time 1
+set -sg escape-time 0
+
+# Increase display of messages to 4 seconds
+set -g display-time 4000
 
 # Index tabs by 1, not 0
 set -g base-index 1
@@ -18,7 +21,7 @@ setw -g mode-keys vi
 set -g status-keys vi
 
 # Let's keep around a lot of buffer
-set -g history-limit 5000
+set -g history-limit 50000
 
 # I like my mouse occasionally
 #setw -g mode-mouse on
@@ -76,6 +79,10 @@ set -g visual-activity on
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 bind-key -Tcopy-mode-vi 'V' send -X rectangle-toggle
+
+# Focus events where supported
+set -g focus-events on
+
 
 ### Colors
 # Old Colors
