--- a/stow/dot-tmux-linux.conf
+++ b/stow/dot-tmux-linux.conf
@@ -1,3 +1,3 @@
 # Don't do full login shells
-set-option -g default-shell "$SHELL"
-set-option -g default-command "$SHELL"
+set-option -g default-shell "${SHELL}"
+set-option -g default-command "${SHELL}"
