--- a/stow/dot-tmux-osx.conf
+++ b/stow/dot-tmux-osx.conf
@@ -1,6 +1,6 @@
 # Make the system clipboard work correctly
 #set-option -g default-command "reattach-to-user-namespace -l bash 2> /dev/null || bash"
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace zsh"
 
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
