tmux-changes: Removing the shorthand alias versions

--- a/stow/dot-tmux.conf
+++ b/stow/dot-tmux.conf
@@ -1,110 +1,110 @@
 # Set prefix to ctrl-a, freeing up ctrl-b
-set -g prefix C-a
-unbind C-b
-bind C-a send-prefix
+set-option -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
 
 # Reduce the default delay
-set -sg escape-time 0
+set-option -s escape-time 0
 
 # Increase display of messages to 4 seconds
-set -g display-time 4000
+set-option -g display-time 4000
 
 # Index tabs by 1, not 0
-set -g base-index 1
-setw -g pane-base-index 1
+set-option -g base-index 1
+set-option-window-option -g pane-base-index 1
 
 # Automatically renumber windows
-set -g renumber-windows on
+set-option -g renumber-windows on
 
 # Mmm, Vi mode
-setw -g mode-keys vi
-set -g status-keys vi
+set-option-window-option -g mode-keys vi
+set-option -g status-keys vi
 
 # Let's keep around a lot of buffer
-set -g history-limit 50000
+set-option -g history-limit 50000
 
 # I like my mouse occasionally
-#setw -g mode-mouse on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
-set -g mouse on
+#set-window-option -g mode-mouse on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-resize-pane on
+#set-option -g mouse-select-window on
+set-option -g mouse on
 
 # Reload config
-bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
+bind-key r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
 
 # More straight forward key bindings for splitting
-unbind %
-bind | split-window -h
-unbind '"'
-bind - split-window -v
+unbind-key %
+bind-key | split-window -h
+unbind-key '"'
+bind-key - split-window -v
 
 # Moving between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # Moving between windows
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
 # Pane resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
 
 # Make things appear goodly
-#set -g status-utf8 on
-set -g default-terminal "screen-256color"
+#set-option -g status-utf8 on
+set-option -g default-terminal "screen-256color"
 
 # Status adjustments
-set -g status-left-length 40
-set -g status-left "#[fg=brightgreen][#S] #[fg=blue]#I:#[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%d %b %R"
-set -g status-justify left
+set-option -g status-left-length 40
+set-option -g status-left "#[fg=brightgreen][#S] #[fg=blue]#I:#[fg=cyan]#P"
+set-option -g status-right "#[fg=cyan]%d %b %R"
+set-option -g status-justify left
 
 # Identify activity
-setw -g monitor-activity on
-set -g visual-activity on
+set-option-window-option -g monitor-activity on
+set-option -g visual-activity on
 
 # Copy/pasting Vim style
 # http://stackoverflow.com/questions/11042920/how-to-copy-and-paste-between-different-tmux-panes-running-vim-instances
 ## For tmux 2.3 and prior
-# bind -t vi-copy v begin-selection
-# bind -t vi-copy y copy-selection
-# bind -t vi-copy V rectangle-toggle
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-selection
+# bind-key -t vi-copy V rectangle-toggle
 ## For tmux 2.4 and later
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 bind-key -Tcopy-mode-vi 'V' send -X rectangle-toggle
 
 # Focus events where supported
-set -g focus-events on
+set-option -g focus-events on
 
 
 ### Colors
 # Old Colors
-#set -g status-fg white
-#set -g status-bg black
+#set-option -g status-fg white
+#set-option -g status-bg black
 #
-#setw -g window-status-fg cyan
-#setw -g window-status-bg default
-#setw -g window-status-attr dim
+#set-window-option -g window-status-fg cyan
+#set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
 #
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
+#set-window-option -g window-status-current-fg white
+#set-window-option -g window-status-current-bg red
+#set-window-option -g window-status-current-attr bright
 #
-#set -g pane-border-fg green
-#set -g pane-border-bg black
-#set -g pane-active-border-fg white
-#set -g pane-active-border-bg yellow
+#set-option -g pane-border-fg green
+#set-option -g pane-border-bg black
+#set-option -g pane-active-border-fg white
+#set-option -g pane-active-border-bg yellow
 #
-#set -g message-fg white
-#set -g message-bg black
-#set -g message-attr bright
+#set-option -g message-fg white
+#set-option -g message-bg black
+#set-option -g message-attr bright
 
 ### New Colors
 # Solarized 256, from
@@ -147,27 +147,27 @@ set -g focus-events on
 # See http://designmodo.github.io/Flat-UI/
 
 # default statusbar colors
-set-option -g status-style bg="#2C3E50",fg="#ECF0F1",default
+set-option-option -g status-style bg="#2C3E50",fg="#ECF0F1",default
 
 # default window title colors
-set-window-option -g window-status-style fg="#D35400",bg=default,dim
+set-option-window-option -g window-status-style fg="#D35400",bg=default,dim
 
 # active window title colors
-set-window-option -g window-status-current-style fg="#F1C40F",bg=default,dim
+set-option-window-option -g window-status-current-style fg="#F1C40F",bg=default,dim
 
 # pane border
-set-option -g pane-border-style fg="#34495E",bg="#2C3E50"
-set-option -g pane-active-border-style fg="#1ABC9C",bg="#C0392B"
+set-option-option -g pane-border-style fg="#34495E",bg="#2C3E50"
+set-option-option -g pane-active-border-style fg="#1ABC9C",bg="#C0392B"
 
 # message text
-set-option -g message-style fg="#F39C12",bg="#2C3E50"
+set-option-option -g message-style fg="#F39C12",bg="#2C3E50"
 
 # pane number display
-set-option -g display-panes-active-colour "#2980B9"
-set-option -g display-panes-colour "#2980B9"
+set-option-option -g display-panes-active-colour "#2980B9"
+set-option-option -g display-panes-colour "#2980B9"
 
 # clock
-set-window-option -g clock-mode-colour "#C0392B"
+set-option-window-option -g clock-mode-colour "#C0392B"
 
 ### End My Colors
 
