tmux-changes: Lots of rework of .tmux.conf

--- a/stow/dot-tmux.conf
+++ b/stow/dot-tmux.conf
@@ -3,25 +3,42 @@ set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+### Settings
+
+#### tmux-sensible settings
+# Mimicking the settings from tmux-sensible without actually installing the
+# plugin, because I don't feel like I need all that
+
 # Reduce the default delay
 set-option -s escape-time 0
+
+# Let's keep around a lot of buffer
+set-option -g history-limit 50000
 
 # Increase display of messages to 4 seconds
 set-option -g display-time 4000
 
+# Refresh status-left and status-right more often
+set-option -g status-interval 5
+
+# Better colors and all
+set-option -sg default-terminal "screen-256color"
+
+# Focus events where supported
+set-option -g focus-events on
+
+#### End tmux-sensible settings
+
 # Index tabs by 1, not 0
 set-option -g base-index 1
-set-option-window-option -g pane-base-index 1
+set-window-option -g pane-base-index 1
 
 # Automatically renumber windows
 set-option -g renumber-windows on
 
 # Mmm, Vi mode
-set-option-window-option -g mode-keys vi
+set-window-option -g mode-keys vi
 set-option -g status-keys vi
-
-# Let's keep around a lot of buffer
-set-option -g history-limit 50000
 
 # I like my mouse occasionally
 #set-window-option -g mode-mouse on
@@ -29,6 +46,14 @@ set-option -g history-limit 50000
 #set-option -g mouse-resize-pane on
 #set-option -g mouse-select-window on
 set-option -g mouse on
+
+# Identify activity
+set-window-option -g monitor-activity on
+set-option -g visual-activity on
+
+### End Settings
+
+### Key Bindings
 
 # Reload config
 bind-key r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
@@ -55,19 +80,11 @@ bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
 bind-key -r L resize-pane -R 5
 
-# Make things appear goodly
-#set-option -g status-utf8 on
-set-option -g default-terminal "screen-256color"
-
 # Status adjustments
 set-option -g status-left-length 40
 set-option -g status-left "#[fg=brightgreen][#S] #[fg=blue]#I:#[fg=cyan]#P"
 set-option -g status-right "#[fg=cyan]%d %b %R"
 set-option -g status-justify left
-
-# Identify activity
-set-option-window-option -g monitor-activity on
-set-option -g visual-activity on
 
 # Copy/pasting Vim style
 # http://stackoverflow.com/questions/11042920/how-to-copy-and-paste-between-different-tmux-panes-running-vim-instances
@@ -80,9 +97,7 @@ bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 bind-key -Tcopy-mode-vi 'V' send -X rectangle-toggle
 
-# Focus events where supported
-set-option -g focus-events on
-
+### End Key Bindings
 
 ### Colors
 # Old Colors
@@ -150,10 +165,10 @@ set-option -g focus-events on
 set-option-option -g status-style bg="#2C3E50",fg="#ECF0F1",default
 
 # default window title colors
-set-option-window-option -g window-status-style fg="#D35400",bg=default,dim
+set-window-option -g window-status-style fg="#D35400",bg=default,dim
 
 # active window title colors
-set-option-window-option -g window-status-current-style fg="#F1C40F",bg=default,dim
+set-window-option -g window-status-current-style fg="#F1C40F",bg=default,dim
 
 # pane border
 set-option-option -g pane-border-style fg="#34495E",bg="#2C3E50"
@@ -167,10 +182,10 @@ set-option-option -g display-panes-active-colour "#2980B9"
 set-option-option -g display-panes-colour "#2980B9"
 
 # clock
-set-option-window-option -g clock-mode-colour "#C0392B"
+set-window-option -g clock-mode-colour "#C0392B"
 
 ### End My Colors
 
-# OS-specific files
+### OS-specific files
 if-shell 'test "$(uname -s)" = "Darwin"' 'source ~/.tmux-osx.conf'
 if-shell 'test "$(uname -s)" = "Linux"'  'source ~/.tmux-linux.conf'
