tmux settings changes (#4)
Lots of clean and reorg, and copying tmux-sensible settings, mostly

--- a/stow/dot-tmux-osx.conf
+++ b/stow/dot-tmux-osx.conf
@@ -1,7 +1,8 @@
 # Make the system clipboard work correctly
+# Not using -l now to avoid login shell
 #set-option -g default-command "reattach-to-user-namespace -l bash 2> /dev/null || bash"
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace zsh"
 
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+bind-key C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind-key C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
