--- a/stow/dot-tmux.conf
+++ b/stow/dot-tmux.conf
@@ -162,7 +162,7 @@ bind-key -Tcopy-mode-vi 'V' send -X rectangle-toggle
 # See http://designmodo.github.io/Flat-UI/
 
 # default statusbar colors
-set-option-option -g status-style bg="#2C3E50",fg="#ECF0F1",default
+set-option -g status-style bg="#2C3E50",fg="#ECF0F1",default
 
 # default window title colors
 set-window-option -g window-status-style fg="#D35400",bg=default,dim
@@ -171,15 +171,15 @@ set-window-option -g window-status-style fg="#D35400",bg=default,dim
 set-window-option -g window-status-current-style fg="#F1C40F",bg=default,dim
 
 # pane border
-set-option-option -g pane-border-style fg="#34495E",bg="#2C3E50"
-set-option-option -g pane-active-border-style fg="#1ABC9C",bg="#C0392B"
+set-option -g pane-border-style fg="#34495E",bg="#2C3E50"
+set-option -g pane-active-border-style fg="#1ABC9C",bg="#C0392B"
 
 # message text
-set-option-option -g message-style fg="#F39C12",bg="#2C3E50"
+set-option -g message-style fg="#F39C12",bg="#2C3E50"
 
 # pane number display
-set-option-option -g display-panes-active-colour "#2980B9"
-set-option-option -g display-panes-colour "#2980B9"
+set-option -g display-panes-active-colour "#2980B9"
+set-option -g display-panes-colour "#2980B9"
 
 # clock
 set-window-option -g clock-mode-colour "#C0392B"
