--- a/stow/dot-tmux.conf
+++ b/stow/dot-tmux.conf
@@ -186,6 +186,9 @@ set-window-option -g clock-mode-colour "#C0392B"
 
 ### End My Colors
 
+## Allow passthrough of escape sequences
+set-option -g allow-passthrough 1
+
 ### OS-specific files
 if-shell 'test "$(uname -s)" = "Darwin"' 'source ~/.tmux-osx.conf'
 if-shell 'test "$(uname -s)" = "Linux"'  'source ~/.tmux-linux.conf'
