Adding to ignored bits for config

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ stow/dot-config/coc
 stow/dot-config/code-server
 stow/dot-config/configstore
 stow/dot-config/direnv/allow
+stow/dot-config/fontforge
 stow/dot-config/gh
 stow/dot-config/htop
 stow/dot-config/iterm2
