--- a/stow/dot-tmux.conf
+++ b/stow/dot-tmux.conf
@@ -187,7 +187,7 @@ set-window-option -g clock-mode-colour "#C0392B"
 ### End My Colors
 
 ## Allow passthrough of escape sequences
-set-option -g allow-passthrough 1
+#set-option -g allow-passthrough on
 
 ### OS-specific files
 if-shell 'test "$(uname -s)" = "Darwin"' 'source ~/.tmux-osx.conf'
