Updating submodules, small tmux/nvim tweaks

--- a/stow/dot-tmux-osx.conf
+++ b/stow/dot-tmux-osx.conf
@@ -1,7 +1,7 @@
 # Make the system clipboard work correctly
 # Not using -l now to avoid login shell
 #set-option -g default-command "reattach-to-user-namespace -l bash 2> /dev/null || bash"
-set-option -g default-command "reattach-to-user-namespace zsh"
+#set-option -g default-command "reattach-to-user-namespace zsh"
 
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
 bind-key C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
